sandc/test/fixtures/astRegression/shouldSucceed/productions/interfaceDeclaration/InterfaceExtends.sand
pub interface InterfaceExtends extends Foo, Bar<Baz>, Qux {
    
}