sandc/test/fixtures/astRegression/shouldFail/productions/isExpression/GenericTypeInstantiation.sand
pub class GenericTypeInstantiation {
    foo() {
        x() is Foo<Bar>
    }
}